Adicionando verificação de erro 2 em tela de login.

--- a/rhecruta-java/src/main/webapp/index.xhtml
+++ b/rhecruta-java/src/main/webapp/index.xhtml
@@ -107,6 +107,8 @@
     var erro = "${param.error}";
     if(erro == "1") {
         swal("Oops...", "Não foi possivel logar", "error");
+    } else if (erro = "2") {
+        swal("Erro", "Selecione uma opção válida para o tipo de Usuario!", "error");
     }
 </script>
 </body>
