--- a/rhecruta-java/src/main/webapp/index.xhtml
+++ b/rhecruta-java/src/main/webapp/index.xhtml
@@ -108,7 +108,7 @@
     var erro = "${param.error}";
     if(erro == "1") {
         swal("Oops...", "Não foi possivel logar", "error");
-    } else if (erro = "2") {
+    } else if (erro == "2") {
         swal("Erro", "Selecione uma opção válida para o tipo de Usuario!", "error");
     }
 </script>
