Corrigindo redirecionamento em index.xhtml

--- a/rhecruta-java/src/main/webapp/index.xhtml
+++ b/rhecruta-java/src/main/webapp/index.xhtml
@@ -75,7 +75,7 @@
 
             <div class="row">
                 <div class="row center-align">
-                    E novo?<a href="cadastro.xhtml"> Crie uma conta.</a>
+                    E novo?<a href="faces/cadastro.xhtml"> Crie uma conta.</a>
                 </div>
             </div>
         </div>
