Implementando XHTML e JSF Controller para Candidatura, modificando método para candidatura em homeCandidato.xhtml

--- a/rhecruta-java/src/main/webapp/homeCandidato.xhtml
+++ b/rhecruta-java/src/main/webapp/homeCandidato.xhtml
@@ -82,7 +82,7 @@
                                 <i class="material-icons left">star_rate</i>Adicionar Interesse
                             </button>
                             <button class="btn waves-effect waves-light btn light-green accent-4"
-                                    jsf:action="${redirectController.candidatura()}">
+                                    jsf:action="${candidaturaController.iniciarCandidatura(vaga.id)}">
                                 <i class="material-icons left">send</i>Candidatar-se
                             </button>
                         </h:column>
