Corrigindo link no botão de confirmação de candidatura em candidatura.xhtml

--- a/rhecruta-java/src/main/webapp/candidatura.xhtml
+++ b/rhecruta-java/src/main/webapp/candidatura.xhtml
@@ -68,7 +68,7 @@
                     <div class="card-action">
                         <div class="center-align">
                             <button class="btn waves-effect waves-light btn light-green accent-4"
-                                    jsf:action="#{cadastroController.cadastrar()}">
+                                    jsf:action="${candidaturaController.finalizarCandidatura()}">
                                 <i class="material-icons left">send</i>Confirmar Candidatura
                             </button>
                         </div>
