Modificando nome de página de confirmação de candidatura de 'candidatura.xhtml' para 'confirmarCandidatura.xhtml' para ser mais claro e evitar conflitos.

--- a/rhecruta-java/src/main/webapp/confirmarCandidatura.xhtml
+++ b/rhecruta-java/src/main/webapp/confirmarCandidatura.xhtml
@@ -5,7 +5,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <head>
-    <title>Candidatura</title>
+    <title>Confirmar Candidatura</title>
     <meta charset="UTF-8" />
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
