--- a/rhecruta-java/src/main/webapp/index.xhtml
+++ b/rhecruta-java/src/main/webapp/index.xhtml
@@ -15,13 +15,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8"/>
 </head>
 <body class="grey lighten-3">
-<div class="navbar-fixed">
-    <nav>
-        <div class="nav-wrapper light-green accent-4">
-            <a class="brand-logo center">Rhecruta</a>
-        </div>
-    </nav>
-</div>
+  <!--
+  <div class="navbar-fixed">
+      <nav>
+          <div class="nav-wrapper light-green accent-4">
+              <a class="brand-logo center">Rhecruta</a>
+          </div>
+      </nav>
+  </div>
+  -->
 <div class="container" style="margin-top: 3%">
 
     <h:form>
@@ -32,7 +34,7 @@
                 <div class="card-image">
                     <img src="assets/img/login.png" />
                     <span class="card-title">
-                        <h2 class="light-green-text text-accent-4">Login</h2>
+                        <h2 class="white-text text-accent-4">Rhecruta</h2>
                     </span>
                 </div>
                 <div class="card-content">
@@ -75,7 +77,7 @@
 
             <div class="row">
                 <div class="row center-align">
-                    E novo?<a href="faces/cadastro.xhtml"> Crie uma conta.</a>
+                    É novo?<a href="faces/cadastro.xhtml"> Crie uma conta.</a>
                 </div>
             </div>
         </div>
