--- a/rhecruta-java/src/main/webapp/meusInteresses.xhtml
+++ b/rhecruta-java/src/main/webapp/meusInteresses.xhtml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:jsf="http://xmlns.jcp.org/jsf"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <head>
-        <title>TODO supply a title</title>
+        <title>Meus Interesses</title>
         <!--Import Google Icon Font-->
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
@@ -41,7 +36,7 @@ and open the template in the editor.
       </div>
 
       <div class="container">
-          <div jsf:rendered="${not empty candidatoController.candidato.interesses}">
+          <div>
             <h:form>
                 <h:dataTable value="${candidatoController.candidato.interesses}" var="vaga">
                     <h:column>
