Implementando função de remover candidatura mesmo se ela tiver uma entrevista em minhasCandidaturas e andidaturaService.

--- a/rhecruta-java/src/main/webapp/minhasCandidaturas.xhtml
+++ b/rhecruta-java/src/main/webapp/minhasCandidaturas.xhtml
@@ -65,9 +65,9 @@
                                             jsf:action="${candidaturaController.verMais(candidatura.id)}">
                                         <i class="material-icons left">star_rate</i>Ver Mais
                                     </button>
-                                    <button class="btn waves-effect waves-light btn light-green accent-4"
+                                    <button class="btn waves-effect waves-light btn red accent-4"
                                             jsf:action="${candidaturaController.excluir(candidatura.id)}">
-                                        <i class="material-icons left">send</i>Exluir
+                                        <i class="material-icons left">delete</i>Cancelar
                                     </button>
                                 </h:column>
                             </h:dataTable>
