Arrumando vizualização dos botões nas telas: minhasCandidaturas e homeCandidato.

--- a/rhecruta-java/src/main/webapp/minhasCandidaturas.xhtml
+++ b/rhecruta-java/src/main/webapp/minhasCandidaturas.xhtml
@@ -63,7 +63,7 @@
                                     <f:facet name="header">Ações:</f:facet>
                                     <button class="btn waves-effect waves-light btn light-green accent-4"
                                             jsf:action="${candidaturaController.verMais(candidatura.id)}">
-                                        <i class="material-icons left">star_rate</i>Ver Mais
+                                        <i class="material-icons left">send</i>Detalhes
                                     </button>
                                     <button class="btn waves-effect waves-light btn red accent-4"
                                             jsf:action="${candidaturaController.excluir(candidatura.id)}">
