--- a/rhecruta-java/src/main/webapp/homeCandidato.xhtml
+++ b/rhecruta-java/src/main/webapp/homeCandidato.xhtml
@@ -90,13 +90,16 @@
                         </h:column>
                         <h:column>
                             <f:facet name="header">Ações:</f:facet>
-                            <button class="btn waves-effect waves-light btn light-green accent-4"
+                            <button class="btn waves-effect waves-light light-green accent-4"
+                                    style="width: 125%"
                                     jsf:action="${candidatoController.adicionarInteresse(vaga.id)}">
-                                <i class="material-icons left">star_rate</i>Adicionar Interesse
+                                <i class="material-icons left">star</i>Interesse
                             </button>
-                            <button class="btn waves-effect waves-light btn light-green accent-4"
+
+                            <button class="btn waves-effect waves-light light-green accent-4"
+                                    style="width: 125%"
                                     jsf:action="${candidaturaController.iniciarCandidatura(vaga.id)}">
-                                <i class="material-icons left">send</i>Candidatar-se
+                                <i class="material-icons left">send</i>Candidatar
                             </button>
                         </h:column>
                     </h:dataTable>
