Adicionando métodos de remoção e edição de Entrevista em EntrevistaController, adicionando tela de edição de Entrevistas.

--- a/rhecruta-java/src/main/webapp/todasEntrevistas.xhtml
+++ b/rhecruta-java/src/main/webapp/todasEntrevistas.xhtml
@@ -74,7 +74,7 @@
                             <i class="material-icons left">send</i>Editar
                         </button>
                         <button class="btn waves-effect waves-light btn red accent-4"
-                                jsf:action="${entrevistaController.cancelarEntrevista(entrevista)}">
+                                jsf:action="${entrevistaController.removerEntrevista(entrevista)}">
                             <i class="material-icons left">delete</i>Cancelar
                         </button>
                     </h:column>
