Mostrando atributos de classificação nas telas de listagem de entrevista e adicionando botão de avaliar na tela de todasEntrevistas

--- a/rhecruta-java/src/main/webapp/minhasEntrevistas.xhtml
+++ b/rhecruta-java/src/main/webapp/minhasEntrevistas.xhtml
@@ -60,6 +60,12 @@
                         Estado: ${entrevista.local.estado}
                     </h:column>
                     <h:column>
+                        <f:facet name="header">Classificacao</f:facet>
+                        Classificacao: ${entrevista.classificacaoDoCandito}
+                        <br/>
+                        Nota: ${entrevista.notaDoCandidato}
+                    </h:column>
+                    <h:column>
                         <f:facet name="header">Ações:</f:facet>
                         <button class="btn waves-effect waves-light btn red accent-4"
                                 jsf:action="${entrevistaController.cancelarEntrevista(entrevista)}">
