Corrigindo algumas rotas.

--- a/rhecruta-java/src/main/webapp/homeGerente.xhtml
+++ b/rhecruta-java/src/main/webapp/homeGerente.xhtml
@@ -25,6 +25,7 @@
       <h:form>
         <li><a jsf:action="${redirectController.todasEntrevistas()}">Todas Entrevistas</a></li>
         <li><a jsf:action="${redirectController.todasCandidaturasGerente()}">Todas Candidaturas</a></li>
+        <li><a jsf:action="${redirectController.buscarCurriculos()}">Buscar Curriculos</a></li>
       </h:form>
     </ul>
 
