--- a/rhecruta-java/src/main/webapp/todosCurriculos.xhtml
+++ b/rhecruta-java/src/main/webapp/todosCurriculos.xhtml
@@ -71,7 +71,7 @@
               </div>
               <div>
                 <h:form>
-                    <h:dataTable value="${entrevistaController.entrevistas}" var="entrevista">
+                    <h:dataTable value="${curriculoController.entrevistas}" var="entrevista">
                         <h:column>
                             <f:facet name="header">Candidato</f:facet>
                             Nome: ${entrevista.candidatura.candidato.nome}
